--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.8.5",
     "@tanstack/react-query": "^5.90.3",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
