Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-content-loader": "^7.1.1",
     "react-data-table-component": "^7.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
+    "react-timezone-select": "^3.2.8",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1"
