--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.10.2",
     "react-timezone-select": "^3.2.8",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
     "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1"
   },
