--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_APP_VERSION="1.0.0"
 NEXT_PUBLIC_API_BASE_URL="http://localhost:8004/api/v1"
 NEXT_PUBLIC_CLIENT_BASE_URL="http://localhost:3006"
 
-NEXT_PUBLIC_API_BASE_URL_PRODUCTION="https://trusttution-server.onrender.com/api/v1"
+NEXT_PUBLIC_API_BASE_URL_PRODUCTION="https://trusttution-server.vercel.app/api/v1"
 NEXT_PUBLIC_CLIENT_BASE_URL_PRODUCTION="https://trusttution-dev.vercel.app"
 
 NEXT_PUBLIC_TIMEOUT=5000
